--- a/Todo.Apps/iOS/tUdUs/Cordova.plist
+++ b/Todo.Apps/iOS/tUdUs/Cordova.plist
@@ -24,9 +24,7 @@
 	<string>none</string>
 	<key>ExternalHosts</key>
 	<array>
-		<string>http://localhost</string>
-		<string>https://vs2012devwin8</string>
-		<string>https://vs2012devwin8:8888</string>
+		<string>https://ttidentity.cloudapp.net</string>
 		<string>https://secure.shared.live.com</string>
 		<string>https://login.live.com</string>
 		<string>http://*.googleapis.com</string>
